--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 .app {
   background: black;
-  padding: 100px;
+  padding: auto auto;
   height: 100vh;
 }
 
@@ -15,6 +15,7 @@
   border-radius: 4px;
   padding: 5px;
   max-width: 400px;
+  min-width: 300px;
 }
 
 .todo {
